--- a/styles.css
+++ b/styles.css
@@ -1,57 +1,35 @@
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
+/*Animações*/
+@keyframes titulo {
+    from {
+        transform: translateX(500px);
+
+        to {
+            transform: translateX(800px);
+        }
+    }
 }
 
-@font-face {
-    font-family: 'bellefair';
-    src: url('./fonte/bellefair-regular.ttf') format('ttf');
-    font-weight: 400;
+@keyframes ondas {
+    from {
+        transform: translateX(-300px);
+    }
+
+    to {
+        transform: translateX(0px);
+    }
 }
 
-@font-face {
-    font-family: 'cooperhewitt';
-    src: url('../fonte/cooperhewitt-book.woff2') format('woff2');
-    font-weight: 400;
+@keyframes area-azul {
+    from {
+        transform: translateX(-300px);
+    }
+
+    to {
+        transform: translateX(0px);
+    }
 }
 
-@font-face {
-    font-family: 'cooperhewitt';
-    src: url('../fonte/cooperhewitt-light.woff2') format('woff2');
-    font-weight: 300;
-}
-
-@font-face {
-    font-family: 'cooperhewitt';
-    src: url('./fonte/cooperhewitt-medium.woff2') format('woff2');
-    font-weight: 500;
-}
-
-html {
-    font-size: 62.5%;
-}
-
-body {
-    background-color: #F6F5F6;
-    overflow-x: hidden;
-
-}
 /*Header*/
-.container{
-
-    max-width: 100%;
-    padding: 0 100px;
-}
-
-@media(min-width: 300px) and (max-width:820px){
-    .container{
-
-        max-width: 100%;
-        padding: 0 15px;
-
-}
- }
 .header .container {
     display: flex;
     justify-content: space-between;
@@ -59,49 +37,12 @@ body {
     height: 90px;
 }
 
-@media(min-width: 300px) and (max-width:820px){
+@media(min-width: 300px) and (max-width:1000px) {
     .header .container {
         display: flex;
         align-items: center;
         height: 90px;
-
-
     }
-}
-
-/*Botão*/
-
-.botao {
-    font-family: 'cooperhewitt', normal;
-    background-color: #E5695B;
-    color: #F6F5F6;
-    width: 132px;
-    height: 34px;
-    text-align: center;
-    font-size: 1.4rem;
-    text-decoration: none;
-    color: #F6F5F6;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: ease-out 0.3s;
-    transition: transform 1000ms;
-}
-.botao:hover,
-.botao:focus-visible{
-    transform: translateY(-1rem);
-    transition: transform 100ms;
-}
-
-
-.botao:focus{
-    background-color: #E5695B;
-    color: #CACBCE;
-}
-
-
-.botao:hover{
-    background-color: #F26F60;
 }
 
 /*Corpo*/
@@ -116,120 +57,35 @@ body {
     animation: titulo 1.5s linear;
 }
 
-
-@keyframes titulo{
-    from{transform: translateX(500px);
-    to{transform: translateX(800px);}}
-}
-
-@media(min-width:300px) and (max-width: 820px){
+@media(min-width:300px) and (max-width: 1000px) {
     #titulo {
-        font-family: 'Bellefair', serif;
-        font-weight: 300;
-        color: #22425C;
         font-size: 4.0rem;
-        text-align: center;
-        margin-top: 100px;
+    }
+}
 
-}
-}
 .ondas {
     margin-top: 122px;
     width: 100%;
     animation: ondas 1.5s linear;
 }
 
-@keyframes ondas{
-    from{transform: translateX(-300px);}
-    to{transform: translateX(0px);}
-}
-
-@media(min-width:300px) and (max-width: 820px){
+@media(min-width:300px) and (max-width: 1000px) {
     .ondas {
         margin-top: 80px;
         width: 100%;
     }
 }
 
-
 #area-azul {
     background-color: #22425C;
     height: 389px;
     margin-top: -10px;
-    animation: area-azul 1.5s linear ;
-
+    animation: area-azul 1.5s linear;
+    z-index: 0;
 }
 
-@media(min-width: 300px) and (max-width: 820px){
-    #area-azul {
-        background-color: #22425C;
-        height: 389px;
-        margin-top: -10px;
-
-
-}
-
-
-}
-
-@keyframes area-azul{
-        from{transform: translateX(-300px);}
-        to{transform: translateX(0px);}
-    }
-    
-.conteudo {
-    height: 369px;
-    max-width: 583px;
-    margin: 0 auto;
-    margin-top: -310px;
-    width: 100%;
-}
-
-@media(min-width: 300px) and (max-width: 820px){
-    .conteudo {
-        margin-top: -310px;
-        padding: 1rem 1rem 1rem 1rem;
-        max-width: 350px;
-    }
-}
-#texto {
-    font-family: 'cooperhewitt', normal;
-    background-color: white;
-    box-shadow: 0px 3px 6px #00000029;
-    border-radius: 10px;
-    text-align: left;
-    padding-top: 70px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 40px;
-    color: #4B535B;
-    font-size: 1.6rem;
-    border: 1px solid #CACBCE;
-    line-height: 24px;
-
-}
-
-@media(min-width: 300px) and (max-width: 820px){
-    #texto {
-        font-family: 'cooperhewitt', normal;
-        background-color: white;
-        box-shadow: 0px 3px 6px #00000029;
-        border-radius: 10px;
-        text-align: left;
-        padding-top: 50px;
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-bottom: 20px;
-        color: #4B535B;
-        font-size: 1.4rem;
-        border: 1px solid #CACBCE;
-        line-height: 20px;
-    
-
-}
-}
 /*Conteudo e Imagens*/
-.conteudo-img {
+.resumo__icone {
     background-color: #ffffff;
     width: 100px;
     height: 100px;
@@ -242,190 +98,138 @@ body {
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
-
+    z-index: 1;
 }
 
-
-#praia {
-    height: 40px;
-    width: 50px;
-
-}
-
-.container-interno {
-    position: relative;
+.resumo__conteudo {
+    height: 369px;
+    margin-top: -310px;
     width: 100%;
+    font-size: 1.6rem;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+    position: relative;
 }
 
 
+.resumo__texto {
+    background-color: white;
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 10px;
+    text-align: left;
+    padding: 75px 25px;
+    padding-bottom: 25px;
+    color: #4B535B;
+    max-width: 533px;
+    border: 1px solid #CACBCE;
+    line-height: 24px;
+}
 
-.img{
+@media(min-width: 300px) and (max-width: 1000px) {
+    .resumo__texto {
+        line-height: 20px;
+        font-size: 1.4rem;
+    }
+}
+
+.atividades .container{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.atividades__item {
+    text-align: center;
+    margin-top: 25px;
+    color: #4B535B;
+    font-size: 2.2rem;
+}
+
+@media(min-width: 300px) and (max-width: 1000px) {
+    .atividades__item {
+        font-size: 1.8rem;
+    }
+}
+.atividades__img {
     height: 300px;
     width: 300px;
     border-radius: 300px;
     object-fit: cover;
-
+    margin-bottom: 15px;
 }
 
-@media(min-width: 300px) and (max-width: 820px){
-    .img{
+@media(min-width: 300px) and (max-width: 1000px) {
+    .atividades__img {
         height: 200px;
         width: 200px;
         border-radius: 100px;
-        object-fit: cover;
-    
-}
+    }
 }
 
-#div-img figure:first-child .img{
+.atividades .atividades__item:first-child img {
     object-position: bottom;
 }
 
-#div-img figure:last-child .img{
+.atividades .atividades__item:last-child img {
     object-position: left;
 }
 
-.conteudo-img{
-    display: flex;
-    align-items: center
-}
-
-#div-img{
-    display: flex;
-    justify-content: space-evenly;
-    width: 100%;
-    margin-top: 78px;
-        
-}
-
-@media(min-width:300px) and (max-width:820px){
-    #div-img {
-        display:flex;
-        flex-direction: column;
-        margin-top: 10px;
-        
-}
-}
-
-.titulos-h4{
-    text-align: center;
-    margin-top: 25px;
-    font-family: 'cooperhewitt', normal;
-    color: #4B535B;
-    font-size: 22px;
-    
-}
-
-@media(min-width: 300px) and (max-width: 820px){
-    
-.titulos-h4{
-    text-align: center;
-    margin-top: 25px;
-    font-family: 'cooperhewitt', normal;
-    color: #4B535B;
-    font-size: 18px;
-}
-}
-
-.textos{
-    font-family: 'cooperhewitt', normal ;
+.atividades__descricao{
     color: #4B535B;
     font-size: 16px;
     width: 339px;
     margin-top: 15px;
 }
-@media(min-width: 300px) and (max-width: 820px){
-    .textos{
-        font-family: 'cooperhewitt', normal ;
+
+@media(min-width: 300px) and (max-width: 1000px) {
+    .atividades__descricao{
         color: #4B535B;
         font-size: 16px;
         margin-top: 15px;
         width: auto;
-}
-}
-
-/*Div a Vida esta La fora*/
-#titulo-rodape{
-    font-size: 22px;
-    
-}
-
-@media(min-width: 300px) and (max-width: 820px){
-    #titulo-rodape{
-        font-size: 18px;
-        
+        text-align: center;
     }
 }
 
-.rodape{
+.rodape__card {
     background-color: white;
     height: 195px;
     margin-top: 50px;
     color: #4B535B;
     font-size: 16px;
     text-align: center;
-    padding-top: 25px;
-    font-family: 'cooperhewitt' , normal;
+    padding: 25px;
     box-shadow: 0px 3px 6px #00000029
 }
 
-@media(min-width: 300px) and (max-width: 820px){
-    .rodape{
-        font-size: 14px;
- 
+@media(min-width: 300px) and (max-width: 1000px) {
+    .rodape {
+        font-size: 1.4rem;
     }
 }
 
-.botao-rodape{
-    padding-top: 38px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-
-}
-
-#botao-rodape{
-    width: 206px;
-    height: 55px;
+.rodape__titulo{
     font-size: 2.2rem;
 }
 
-@media(min-width: 300px) and (max-width: 820px){
-    #botao-rodape{
-        width: 180px;
-        height: 40px;
+@media(min-width: 300px) and (max-width: 1000px) {
+    .rodape__titulo {
         font-size: 1.8rem;
     }
 }
 
-/*Footer*/
-.footer{
-    width: 100%;
-    height: 68px;
-    font-family: 'cooperhewitt', light;
-    color: #787878;
-    text-align: center;
-    font-size: 1.4rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    
-    
-
-}
-
-#hr{
+.divisor {
     border: 1px solid #CACBCE;
     margin-top: 50px;
 }
 
-.p{
-    padding-top: 15px;
-}
-
-@media(min-width: 300px) and (max-width: 820px){
-    .p{
-        padding-top: 10px;
-    }
+footer {
+    width: 100%;
+    height: 68px;
+    color: #787878;
+    font-size: 1.4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
